# pynetworkin

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .zenodo.json  ARCHITECTURE.md  AUDIT.md  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  NON_CODE_AUDIT.md  NOTICE  NetworKIN.py  README.md  RUN.md  cli.py  conftest.py  dev.db  docker-compose.dev.yml  docker-compose.yml  docker-push.sh  docker_down.sh  docker_interactive.sh  docker_push.sh  docker_test_local.sh  docker_up.sh  graph_scoring.py  likelihood.py  logger.py  mkdocs.yml  motif_scoring.py  output.py  pipeline.py  pyproject.toml  recovery.py  requirements.txt
.cache/: phosphosite.parquet  string_9606_400.parquet
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  pre-commit.yml  release-pypi.yml  release-zenodo.yml  release.yml
alembic/: env.py
alembic/versions/: 454a3569b97a_initial_schema.py
archive/HGNC_Symbol_mapping/: 9606.alias_best.v9.0.01042014.tsv  Biomart_map_Ensembl54.txt  Biomart_map_Ensembl59.txt  Biomart_map_Ensembl62.txt  Biomart_map_Ensembl63.txt  Biomart_map_Ensembl64.txt  Biomart_map_Ensembl65.txt  Biomart_map_Ensembl66.txt  Biomart_map_Ensembl67.txt  Biomart_map_Ensembl68.txt  Biomart_map_Ensembl75.txt  Biomart_map_uniq.txt  HGNC_symbol_list.txt  Uniprot_map.txt  ensps_from_alias.txt  ensps_from_sequence.txt  idmap_STRING_UniprotAC_by_Uniprot.txt  idmap_UniprotAC_HGNC.txt  string_id_unique.txt
data/: conversion_indirect.parquet  group_human_protein_name_map.tsv  group_human_protein_name_map_curated.tsv  new_name_map.py
data/derived/: 9606.protein.sequences.fa.phr  9606.protein.sequences.fa.pin  9606.protein.sequences.fa.pog  9606.protein.sequences.fa.pos  9606.protein.sequences.fa.pot  9606.protein.sequences.fa.pto
data/fallback/: phosphosites_sample.tsv  string_sample.tsv  test_input.fasta
data/string_data/: string_network_filter.py
data_ProteomeDiscoverer_sample/: fasta_tst.txt
docs/: ARCHITECTURE.md  NON_CODE_AUDIT.md  RUN.md  index.md
docs/api/: graph_scoring.md  motif_scoring.md  output.md  recovery.md
docs/guides/: data_sources.md  installation.md  recovery.md
docs/reference/: cli.md
inputs/: phosphosites.py  string_network.py
legacy_c/binary_human_public/: hugo_pelm.tsv  netphorest.c  pssm_code.h  run.sh
legacy_c/binary_universal_public/: motifs.c  nn_code.h  pssm_code.h  pssm_data.h  run.sh
legacy_c/netphorest/: Makefile  netphorest_unsupported_aa.c  pssm_data.enologo
legacy_web/: batch_NK_results.sh  batch_networkin.sh
legacy_web/binary_human_public/: insr2h.pl  nn2h.pl  pssm2h.pl
legacy_web/netphorest/: insr2h.pl  nn2h.pl  pssm2h.pl
pynetworkin_input/: cleaned_proteins.fasta  cleaned_sites.txt  id_mapping.csv  processing_report.json
results/: csv_column_rewrite.py  fasta_tst.txt.result.tsv
scripts/: backup.py  cleanup_HGNC_mapping.py  generate_sample_data.py  migrate_to_parquet.py
scripts/legacy/: cleanup_HGNC_mapping.py  new_name_map.py  string_network_filter.py
src/pynetworkin/: __init__.py  cli.py  graph_scoring.py  likelihood.py  networkin.py  output.py  recovery.py  resources.py
src/pynetworkin/data/: conversion_direct.parquet
src/pynetworkin/inputs/: __init__.py  maxquant_processor.py  phosphosites.py  string_network.py
tests/: test_maxquant_processor.py  test_motif_scoring.py  test_networkin.py  test_output.py  test_recovery.py  test_resources.py
