[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pynetworkin"
version = "0.1.0"
description = "Kinase–substrate network prediction: PostgreSQL, Numba, pynetphorest, live data, false-negative recovery"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Abhinav Mishra", email = "mishraabhinav36@gmail.com" }]
keywords = ["bioinformatics", "phosphorylation", "kinase", "network", "proteomics", "systems-biology", "netphorest", "networkin", "signalling"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
  "sqlalchemy>=2.0", "psycopg2-binary>=2.9", "alembic>=1.13",
  "pynetphorest>=0.1.1",
  "numba>=0.59", "numpy>=1.26",
  "pandas>=2.2", "pyarrow>=15.0",
  "networkx>=3.3",
  "httpx>=0.27", "requests>=2.32",
  "omnipath>=1.0",
  "typer>=0.12", "rich>=13.7",
  "loguru>=0.7",
  "pydantic>=2.7", "pydantic-settings>=2.2",
  "tqdm>=4.66", "click>=8.1",
]

docs = [
  "mkdocs>=1.6", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.25",
  "mkdocs-gen-files>=0.5", "mkdocs-literate-nav>=0.6",
  "mkdocs-section-index>=0.3", "mkdocs-autorefs>=1.0", "griffe>=0.45",
]
kg = ["scikit-learn>=1.5", "scipy>=1.13"]

[project.scripts]
pynetworkin = "cli:app"

[project.urls]
Homepage = "https://github.com/bibymaths/pynetworkin"
Documentation = "https://bibymaths.github.io/pynetworkin"
Repository = "https://github.com/bibymaths/pynetworkin"
"Bug Tracker" = "https://github.com/bibymaths/pynetworkin/issues"

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "mypy>=1.10",
  "black>=24.4",
  "pre-commit>=3.7",
  "ipython>=8.24",
]

docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
  "mkdocs-gen-files>=0.5",
  "mkdocs-literate-nav>=0.6",
  "mkdocs-section-index>=0.3",
  "mkdocs-autorefs>=1.0",
  "griffe>=0.45",
]

[project.optional-dependencies]
kg = ["scikit-learn>=1.5", "scipy>=1.13"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E","W","F","I","B","C4","UP","N","SIM","ANN","D"]
ignore = ["D100","D101","D102","D103","D104","D105","ANN101","ANN102","E501"]
exclude = ["alembic/", "legacy_c/", "legacy_web/"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.isort]
known-first-party = ["cli","db","models","graph_scoring","motif_scoring","recovery","output","inputs","pipeline","scripts"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["alembic/", "legacy_c/", "legacy_web/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["."]
omit = ["alembic/*", "legacy_c/*", "legacy_web/*", "tests/*", "scripts/*", "docs/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 70
